2022-03-03  Myles C. Maxfield  <mmaxfield@apple.com>

        [Style] Forbid spaces between type names and protocol names in Objective-C
        https://bugs.webkit.org/show_bug.cgi?id=237406

        Reviewed by Darin Adler.

        According to https://lists.webkit.org/pipermail/webkit-dev/2022-February/032130.html.

        * code-style.md:

2022-02-15  Jon Davis  <jond@apple.com>

        Fix WordPress wpautop to account for the Dialog element.
        https://bugs.webkit.org/show_bug.cgi?id=236320

        Reviewed by Darin Adler.

        * wp-content/themes/webkit/functions.php:

2022-02-07  Tim Nguyen  <ntim@apple.com>

        Unreviewed, make <dialog> demos dark theme work in iframes

        Add rules for <body>.

        * demos/dialog-element/dark-theme.css:
        (@media (prefers-color-scheme: dark) body):

2022-02-04  Tim Nguyen  <ntim@apple.com>

        Add <dialog> element demos for blog post
        https://bugs.webkit.org/show_bug.cgi?id=236143

        Reviewed by Simon Fraser.

        * demos/dialog-element/confirmation-dialog-basic.html: Added.
        * demos/dialog-element/confirmation-dialog-form.html: Added.
        * demos/dialog-element/dark-theme.css: Added.
        (body):
        (@media (prefers-color-scheme: dark) dialog):
        * demos/dialog-element/styled-dialog.html: Added.

2022-02-02  Jon Davis  <jond@apple.com>

        Improve color contrast of dark mode syntax highlighting
        https://bugs.webkit.org/show_bug.cgi?id=236041

        Reviewed by Simon Fraser.

        * wp-content/themes/webkit/style.css:
        (@media(prefers-color-scheme:dark) :root):

2021-12-07  Cameron McCormack  <heycam@apple.com>

        Puzzle feature detection followup
        https://bugs.webkit.org/show_bug.cgi?id=233946

        Unreviewed.

        * blog-files/wide-gamut-canvas/puzzle.html:

2021-12-07  Cameron McCormack  <heycam@apple.com>

        Tweak puzzle to use feature detection